--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <section class="hero" id="home">
         <div class="slider">
             <div class="slide active">
-                <img src="images/slider/plane1.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane1.png" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1>استكشف العالم مع سوق الأميال السعودي</h1>
                     <p>اشترِ الأميال لمغامرتك القادمة</p>
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/slider/plane2.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane2.png" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1>استكشف العالم مع سوق الأميال السعودي</h1>
                     <p>اشترِ الأميال لمغامرتك القادمة</p>
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/slider/plane3.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane3.png" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1>استكشف العالم مع سوق الأميال السعودي</h1>
                     <p>اشترِ الأميال لمغامرتك القادمة</p>
@@ -192,7 +192,21 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/slider/plane4.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane4.png" alt="طائرة الخطوط السعودية">
+                <div class="slide-content">
+                    <h1>استكشف العالم مع سوق الأميال السعودي</h1>
+                    <p>اشترِ الأميال لمغامرتك القادمة</p>
+                    <div class="hero-buttons">
+                        <a href="#miles" class="cta-btn">استكشف الأميال</a>
+                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i> <span>تواصل معنا</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!--
+            <div class="slide">
+                <img src="images/slider/plane5.png" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1>استكشف العالم مع سوق الأميال السعودي</h1>
                     <p>اشترِ الأميال لمغامرتك القادمة</p>
@@ -205,20 +219,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/slider/plane5.jpg" alt="طائرة الخطوط السعودية">
-                <div class="slide-content">
-                    <h1>استكشف العالم مع سوق الأميال السعودي</h1>
-                    <p>اشترِ الأميال لمغامرتك القادمة</p>
-                    <div class="hero-buttons">
-                        <a href="#miles" class="cta-btn">استكشف الأميال</a>
-                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
-                            <i class="fab fa-whatsapp"></i> <span>تواصل معنا</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="slide">
-                <img src="images/slider/plane6.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane6.png" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1>استكشف العالم مع سوق الأميال السعودي</h1>
                     <p>اشترِ الأميال لمغامرتك القادمة</p>
@@ -231,6 +232,7 @@
                 </div>
             </div>
         </div>
+    -->
     </section>
 
     <section class="miles" id="miles">
